// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validator rules > should be return password length rule 1`] = `
[
  {
    "message": "请输入密码",
    "required": true,
    "trigger": [
      "blur",
    ],
  },
  {
    "message": "密码长度必须在 6 到 30 个字符之间",
    "trigger": [
      "blur",
    ],
    "validator": [Function],
  },
]
`;

exports[`validator rules > should be return username rule 1`] = `
[
  {
    "message": "请输入用户名",
    "required": true,
    "trigger": [
      "blur",
    ],
  },
  {
    "message": "用户名长度必须在 4 到 16 个字符之间",
    "trigger": [
      "blur",
    ],
    "validator": [Function],
  },
]
`;
